<resources>
    <string name="app_name">PostBellum Empires</string>
    <string name="email">Email</string>
    <string name="pass">Password</string>
    <string name="login">Login</string>
    <string name="register" translatable="false">Register</string>
    <string name="newuser">New Account</string>
    <string name="googlesignin">Sign In with Google</string>
    <string name="googleRegister">Register with Google</string>
    <string name="logout">Logout</string>
    <string name="confirmpw">Confirm Password</string>
    <string name="existingAcc">I Have an Account</string>

    <string name="invalidemail">"The email given is invalid"</string>
    <string name="usedemail">"The email given is already in use"</string>

    <string name="OC">Oratio Cult</string>
    <string name="OCDesc">A group of religious people who believe that the beings that came to earth are their actual gods.</string>
    <string name="DR">Dauntless Raiders</string>
    <string name="ES">Erudite Sovereignty</string>
    <string name="ESDesc">A team of scientists that seek to study and control the technology that belonged to the creatures that came to earth.</string>

    <string name="gpsoff">GPS not detected</string>
    <string name="gpspls">Please enable your GPS</string>

    <string name="chooseAFaction">Choose Your Faction</string>
    <string name="choose">Choose</string>
    <string name="ok">Ok</string>
    <string name="ign">InGame Name</string>
    <string name="OtherPlayers">This is the name you will be known by other players. So choose wisely.</string>
    <string name="mapStyleID">3e52405583a0b32a</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="DRDesc">They were once peaceful soldiers, now they are a group of savage rebels who fight for loot.</string>
    <string name="emptyInventory">Your inventory is empty</string>
    <string name="quantity">Quantity:</string>
    <string name="group">Group 02</string>
    <string name="mrxano">51023 - Alexandre Monteiro</string>
    <string name="lac">55721 - Rodrigo Nogueira</string>
    <string name="mileide">55839 - Mileide Gomes</string>

    <string name="victory">VICTORY</string>
    <string name="defeat">DEFEAT</string>
    <string name="unitskilled">Units killed:</string>
    <string name="unitslost">Units lost:</string>
    <string name="expkills">Exp for kills:</string>
    <string name="victorybonus">Victory bonus:</string>

    <string name="msg_player_1">Your army engaged the enemy and caused some casualties.</string>
    <string name="msg_player_2">Your army engaged the enemy and has inflicted some damage.</string>
    <string name="msg_player_3">Your army first move was not very efficient.</string>
    <string name="msg_player_4">The enemy is on the verge of defeat.</string>
    <string name="msg_player_5">Your army caused some casualties in the enemy.</string>
    <string name="msg_player_6">Your army has attacked the enemy and its being supported by Medics and UAVs.</string>
    <string name="msg_player_7">Your army inflicted damage in the enemy and its being healed by your Medics</string>
    <string name="msg_player_8">Your army attacked the enemy and your UAVs are boosting your mans attack damage.</string>
    <string name="msg_player_9">Your army inflicted lower damage to the enemy.</string>
    <string name="msg_player_10">Your army attacked the enemy.</string>
    <string name="msg_player_11">Your mans have caused great damage to the enemy.</string>
    <string name="msg_player_12">Your Medics and UAVs are supporting your men.</string>
    <string name="msg_player_13">Your Medics are healing your army.</string>
    <string name="msg_player_14">Your UAVs have boosted the damage your army can cause.</string>
    <string name="msg_player_15">Your army move was not very efficient.</string>

    <string name="msg_enemy_1">The enemy has engaged you and killed some of your mans.</string>
    <string name="msg_enemy_2">The enemy has engaged you inflicting damage to your army.</string>
    <string name="msg_enemy_3">The enemy engaged you inefficiently.</string>
    <string name="msg_enemy_4">You are on the verge of defeat.</string>
    <string name="msg_enemy_5">Some of your mans have been killed in battle.</string>
    <string name="msg_enemy_6">The enemy caused some damaged in your army and they have the support of Medics and UAVs.</string>
    <string name="msg_enemy_7">The enemy attacked you and its being healed by their Medics.</string>
    <string name="msg_enemy_8">The enemy caused some damage in your mans and they got the support of UAVs.</string>
    <string name="msg_enemy_9">The enemy did not cause to much damage in you.</string>
    <string name="msg_enemy_10">The enemy has attacked you.</string>
    <string name="msg_enemy_11">The enemy inflicted great damage in your army.</string>
    <string name="msg_enemy_12">Medics and UAVs are supporting the enemy.</string>
    <string name="msg_enemy_13">The enemy Medics are healing their men.</string>
    <string name="msg_enemy_14">The enemy is being boosted by UAVs.</string>
    <string name="msg_enemy_15">the enemy move was not efficient.</string>

    <string name="retreatTitle">Retreat?</string>
    <string name="retreatMsg">If you retreat it will count as a defeat. Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="msg_victory">The Battle has ended and you are victorious!</string>
    <string name="msg_defeat">The Battle has ended but you have been defeated!</string>

    <string name="help1">Earth was once a peaceful civilized place. But then the invaders came, creatures from another world who sought to destroy ours.
        Countless lifes were lost during the invasion, the enemy almost eradicated mankind. After many battles against these invaders we ended up winning the war,
     but at the cost of destroying our world. And from the ashes of the old war, three empires standed against each others for what was left of our world.</string>
    <string name="help2">You were once a soldier before, and now you stand as a general, you may build your own army and fight for the cause of your empire. Your job
    is to claim as many places that survived the old war, and preserve its resources for your faction, the places you own reward you with extra resources when you collect them.
        If needed you can attack a place that is claimed by the enemy, but if you wish to spare your army you can steal from the enemy, but stealing does not reward as much as the places your empire owns.</string>
    <string name="help3">When building your army, you may train whatever units you wish, but there is a limit for how many units you can hold. You can also upgrade them to make your army stronger. Once you
    deploy a unit in a place then it will be claimed in your name but the units you deployed will not return. You can build structures in a place to allow more units to guard it, to strengthen your army, or to
    prevent the enemy from benefiting the resources from your place.</string>

    <string name="foodDesc">One of the most important resources in the game. You can find some food in restaurants, cafes, or any other place related to it.</string>
    <string name="woodDesc">One of the most important resources in the game. You can find some wood in parks, forests, or any other place that is related to nature.</string>
    <string name="ironDesc">Not so used as some other resources, but still has great use in the game. You can find some iron in train stations, subway stations or factories.</string>
    <string name="stoneDesc">A bit more used then iron, still with a lot of uses in the game. You can find some stone in beaches or monuments.</string>
    <string name="knowledgeDesc">Knowledge is power and that is transitioned onto the game with the uses it has. You can find some knowledge in Universities or Museums.</string>
    <string name="medicineDesc">Medicine has less uses then most resources in the game, but the uses it has are very important. You can find some medicine in pharmacies, hospitals and clinics.</string>
    <string name="uraniumDesc">The rarest resource in the game, it works a bit like currency. You can find some uranium in casinos.</string>
    <string name="barrackDesc">There are limits to how many troops you can deploy in each territory. The barracks are used to increase the capacity of troops in those territories.</string>
    <string name="storageDesc">You can only get as many resources from a point, in order to increase the amount of resource from a point belonging to your faction you can deploy a Storage Structure.</string>
    <string name="vaultDesc">Players from other factions already get less resources from points owned by your faction, but with a Vault, you can make that number be even lower.</string>
    <string name="armoryDesc">Each unit has its stats, with the Armory deployed, your units will see an increase in its Attack and Armor stats.</string>
    <string name="medbayDesc">The Medbay will allow your units to have their health stats increased to allow them stay longer in battle.</string>
    <string name="laboratoryDesc">Every unit has its speed to tell how many enemies they can attack each round. With a Laboratory deployed, your units will see an increase in its speed stat.</string>

    <string name="archerDesc">One of the first units in the game, lacks in stats, but is very cheap.</string>
    <string name="marineDesc">One of the first units in the game, a bit stronger then the Archer and cheap, but with different training costs.</string>
    <string name="pyroDesc">This unit is more offensive then the starting ones, but for that strength comes a cost in Health and Armor.</string>
    <string name="tankDesc">Tank is the most resistant unit in the game, besides having great health and armor stats, it is also very strong, so you have to be careful when attacking a place with one.</string>
    <string name="apprenticeDesc">This unit is basically a useless unit at level one, but with the upgrades you start getting a real unit that can make some damage in battles.</string>
    <string name="assassinDesc">Very fast and deadly unit, but very easy to kill, so you need to be careful when using them.</string>
    <string name="wickDesc">Very strong offensively and can do a lot of damage in a battle.</string>
    <string name="medicDesc">This is a support unit, so it does not attack anyone, instead, it has a chance to heal its allies.</string>
    <string name="ramboDesc">Just Rambo. Everyone knows Rambo. Strong and stuff.</string>
    <string name="chemistDesc">This unit throws uses chemical bombs as a weapon, in the battle it can deal damage to units in an area.</string>
    <string name="uavDesc">This is a support unit, so it does not attack, instead it gives vision of the enemies, which translates to a boost of damage for his allies.</string>
</resources>